[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "structural-broadcasting-rl"
version = "0.1.0"
description = "A clean reinforcement learning research repository for structural broadcasting experiments."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pyyaml",
    "torch",
    "matplotlib",
    "imageio",
    "pillow",
    "pytest",
    "gymnasium",
    "minigrid",
    "tqdm",
]

[tool.setuptools.packages.find]
include = ["agents*", "applications*", "core*", "experiments*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
filterwarnings = [
    "ignore:CUDA initialization:UserWarning",
]
